# VectorRetrival

./: .gitignore  .mcp.json  BUILD_AND_TEST.md  CMakeLists.txt  ConannAlgorithm.md  IO优化方案.md  MANIFEST.md  Phase6plan.md  README.md  RabitQemplementation.md  Summary.md  UNDO.txt  VectorRetrival.code-workspace  architecture.md  expected_test_results.md  needtodo.txt  optimization_list.md  package-lock.json  test_configs.txt  tmp.md  优化技巧.md
.claude/: settings.json
.github/workflows/: ci.yml
baselines/results/: analysis.md  boundfetch_alpha_compare_temp.csv  boundfetch_epsilon_alpha_sweep.csv  diskann_sweep.csv  diskann_sweep_low.csv  e2e_comparison_warm.csv  faiss_sweep.csv  plot_boundfetch_alpha_compare_temp.py  plot_boundfetch_epsilon_compare.py  plot_recall_qps.py
benchmarks/: CMakeLists.txt  bench_compare_exrabitq_payloads.cpp  bench_compare_stage_paths.cpp  bench_conann_crc.cpp  bench_conann_recall.cpp  bench_crc_overlap.cpp  bench_e2e.cpp  bench_index_geometry.cpp  bench_ivf_quality.cpp  bench_rabitq_accuracy.cpp  bench_rabitq_diagnostic.cpp  bench_vector_search.cpp  bench_vector_search_inline.cpp  export_ivf_clustering.cpp  migrate_cluster_clu_packedsign.cpp  recompute_crc_scores.cpp
benchmarks/scripts/: hotpath_experiments.md  prepare_msmarco_bench_e2e.py  run_blocked_hadamard_msmarco.py  run_hotpath_experiments.py  run_perf_profile.sh
build-bench-only/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build-bench-only/benchmarks/: Makefile  bench_conann_recall  bench_ivf_quality  bench_rabitq_accuracy  cmake_install.cmake
cmake/: FlatBuffersGenerate.cmake
idea-stage/: THESIS_BLUEPRINT.md  THESIS_BLUEPRINT_20260503_134437.md
include/vdb/codec/: bitpack_codec.h  dict_codec.h
profile_output/epsilon075_anchor/: REPORT.md  baseline.stdout  baseline.time  command.txt  perf.data  perf_report.txt  perf_stat.txt
refine-logs/: BASELINE_PLAN_CN.md  EXPERIMENT_PLAN.md  EXPERIMENT_PLAN_CN.md  EXPERIMENT_TRACKER.md  EXPERIMENT_TRACKER_CN.md  FINAL_PROPOSAL.md  FINAL_PROPOSAL_CN.md  PIPELINE_SUMMARY.md  PIPELINE_SUMMARY_CN.md  README_CN.md  REFINEMENT_REPORT.md  REFINEMENT_REPORT_CN.md  REVIEW_SUMMARY.md  REVIEW_SUMMARY_CN.md
refine-logs/boundfetch-optimizaiton-2026-04-14/: BASELINE_PLAN_CN.md  EXPERIMENT_PLAN.md  EXPERIMENT_PLAN_CN.md  EXPERIMENT_TRACKER.md  EXPERIMENT_TRACKER_CN.md  FINAL_PROPOSAL.md  FINAL_PROPOSAL_CN.md  PIPELINE_SUMMARY.md  PIPELINE_SUMMARY_CN.md  README_CN.md  REFINEMENT_REPORT.md  REFINEMENT_REPORT_CN.md  REVIEW_SUMMARY.md  REVIEW_SUMMARY_CN.md
refine-logs/formal-baseline-study-2026-04-16/: 01_BASELINE_STRATEGY_CN.md  02_DATASET_AND_EMBEDDING_PLAN_CN.md  03_BASELINE_METHODS_CN.md  04_EXECUTION_PLAYBOOK_CN.md  05_RUN_STATUS_TEMPLATE.csv  06_DATASET_REGISTRY_TEMPLATE.csv  07_ENCODER_REGISTRY_TEMPLATE.csv  08_DOWNLOAD_AND_PREP_CHECKLIST_CN.md  09_BASELINE_REGISTRY_TEMPLATE.csv  10_DATA_PREP_SCRIPT_CHECKLIST_CN.md  README.md
refine-logs/thesis-minimal-experiment-2026-05-02/: EXPERIMENT_PLAN.md  EXPERIMENT_PLAN_20260502_152959.md  EXPERIMENT_PLAN_20260503_171523.md  EXPERIMENT_TRACKER.md  EXPERIMENT_TRACKER_20260502_152959.md  EXPERIMENT_TRACKER_20260503_171523.md  FINAL_PROPOSAL.md  FINAL_PROPOSAL_20260502_143600.md  FINAL_PROPOSAL_20260502_145753.md  PIPELINE_SUMMARY_20260503_171523.md  POST_MAIN_SWEEP_REFINEMENT.md  POST_MAIN_SWEEP_REFINEMENT_20260503_165930.md  REFINEMENT_REPORT_20260502_143600.md  REFINEMENT_REPORT_20260502_145753.md  REFINEMENT_REPORT_20260502_152052.md  REFINE_STATE.json  RESULT_ANALYSIS_20260504_101003.md  RESULT_FREEZE_ABLATION.md  REVIEW_SUMMARY_20260502_143600.md  REVIEW_SUMMARY_20260502_145753.md  REVIEW_SUMMARY_20260502_152052.md  round-0-initial-proposal.md  round-1-refinement.md  round-1-review.md  round-2-review.md  round-3-refinement.md  round-4-refinement.md  score-history.md
schema/: .gitkeep  columns.fbs  record.fbs  segment_meta.fbs
scripts/: export_faiss_coarse_clustering.py  faiss_kmeans.py  plot_rabitq_diagnostic.py
src/codec/: bitpack_codec.cpp  dict_codec.cpp
src/columns/: column_chunk_reader.cpp  column_chunk_writer.cpp  column_store.cpp
src/common/: distance.cpp
src/index/: cluster_prober.cpp  conann.cpp  crc_calibrator.cpp  faiss_coarse_builder.cpp  ivf_builder.cpp  ivf_index.cpp
src/io/: jsonl_reader.cpp  npy_reader.cpp  vecs_reader.cpp
src/query/: buffer_pool.cpp  io_uring_reader.cpp  overlap_scheduler.cpp  pread_fallback_reader.cpp  rerank_consumer.cpp  result_collector.cpp
src/rabitq/: rabitq_encoder.cpp  rabitq_estimator.cpp  rabitq_rotation.cpp
src/simd/: address_decode.cpp  bit_unpack.cpp  coarse_select.cpp  distance_l2.cpp  fastscan.cpp  hadamard.cpp  ip_exrabitq.cpp  popcount.cpp  prefix_sum.cpp  prepare_query.cpp  rerank_distance.cpp  signed_dot.cpp  stage2_classify.cpp  transpose.cpp
src/storage/: address_column.cpp  cluster_store.cpp  data_file_reader.cpp  data_file_writer.cpp  pack_codes.cpp  segment.cpp
tests/: CMakeLists.txt
tests/codec/: bitpack_codec_test.cpp  dict_codec_test.cpp
tests/columns/: column_chunk_test.cpp  column_store_test.cpp
tests/common/: aligned_alloc_test.cpp  distance_test.cpp  status_test.cpp  types_test.cpp
tests/index/: bench_e2e.cpp  bench_ivf_quality.cpp  bench_rabitq_accuracy.cpp  conann_test.cpp  crc_calibrator_test.cpp  crc_stopper_test.cpp  ivf_builder_test.cpp  ivf_index_test.cpp  payload_pipeline_test.cpp
tests/io/: jsonl_reader_test.cpp  npy_reader_test.cpp  vecs_reader_test.cpp
tests/query/: buffer_pool_test.cpp  early_stop_test.cpp  io_uring_reader_test.cpp  overlap_scheduler_test.cpp  pread_fallback_reader_test.cpp  rerank_consumer_test.cpp  result_collector_test.cpp
tests/rabitq/: rabitq_encoder_test.cpp  rabitq_estimator_test.cpp  rabitq_rotation_test.cpp
tests/schema/: record_test.cpp  schema_test.cpp
tests/simd/: bit_unpack_test.cpp  distance_l2_test.cpp  ip_exrabitq_test.cpp  popcount_test.cpp  prefix_sum_test.cpp  prepare_query_test.cpp  signed_dot_test.cpp  transpose_test.cpp
tests/storage/: address_column_test.cpp  cluster_store_test.cpp  data_file_test.cpp  segment_test.cpp
(+538 files in other folders)
